--- a/PythonAPI/pycocoZEvalDemo.ipynb
+++ b/PythonAPI/pycocoZEvalDemo.ipynb
@@ -5,16 +5,14 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T10:46:56.848700Z",
-     "start_time": "2018-11-30T10:46:55.967463Z"
+     "end_time": "2018-11-30T12:00:10.085443Z",
+     "start_time": "2018-11-30T12:00:09.148452Z"
     }
    },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "sys.path.append('D:\\API\\cocoapi\\PythonAPI')\n",
     "from pycocotools.cocoz import ImageZ, AnnZ, COCOZ\n",
     "from pycocotools.cocoeval import COCOeval\n",
     "import numpy as np\n",
@@ -28,8 +26,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T10:46:58.140455Z",
-     "start_time": "2018-11-30T10:46:58.135456Z"
+     "end_time": "2018-11-30T12:00:12.227771Z",
+     "start_time": "2018-11-30T12:00:12.223794Z"
     }
    },
    "outputs": [
@@ -53,8 +51,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T10:48:23.430251Z",
-     "start_time": "2018-11-30T10:47:00.278243Z"
+     "end_time": "2018-11-30T12:01:40.283352Z",
+     "start_time": "2018-11-30T12:00:13.060798Z"
     }
    },
    "outputs": [
@@ -63,11 +61,11 @@
      "output_type": "stream",
      "text": [
       "Loading json in memory ...\n",
-      "used time: 7.31199 s\n",
+      "used time: 7.49704 s\n",
       "Loading json in memory ...\n",
       "creating index...\n",
       "index created!\n",
-      "used time: 75.833 s\n"
+      "used time: 79.7175 s\n"
      ]
     }
    ],
@@ -81,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T10:58:51.759508Z",
-     "start_time": "2018-11-30T10:58:51.385702Z"
+     "end_time": "2018-11-30T12:01:42.762698Z",
+     "start_time": "2018-11-30T12:01:42.712678Z"
     }
    },
    "outputs": [
@@ -94,7 +92,7 @@
      "output_type": "stream",
      "text": [
       "Loading and preparing results...\n",
-      "DONE (t=0.36s)\n",
+      "DONE (t=0.04s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -102,17 +100,17 @@
    ],
    "source": [
     "# initialize COCO detections api\n",
-    "resFile = 'D:/API/cocoapi/results/person_keypoints_val2014_fakekeypoints100_results.json'\n",
+    "resFile = '../results/person_keypoints_val2014_fakekeypoints100_results.json'\n",
     "cocoDt = cocoGt.loadRes(resFile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T10:58:55.744886Z",
-     "start_time": "2018-11-30T10:58:55.723905Z"
+     "end_time": "2018-11-30T12:01:44.676687Z",
+     "start_time": "2018-11-30T12:01:44.628709Z"
     }
    },
    "outputs": [],
@@ -124,11 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T10:58:56.969309Z",
-     "start_time": "2018-11-30T10:58:56.491310Z"
+     "end_time": "2018-11-30T12:01:46.010348Z",
+     "start_time": "2018-11-30T12:01:45.324351Z"
     }
    },
    "outputs": [
@@ -138,9 +136,9 @@
      "text": [
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=0.18s).\n",
+      "DONE (t=0.21s).\n",
       "Accumulating evaluation results...\n",
-      "DONE (t=0.26s).\n",
+      "DONE (t=0.43s).\n",
       " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.001\n",
       " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.003\n",
       " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
