--- a/PythonAPI/pycocoZEvalDemo.ipynb
+++ b/PythonAPI/pycocoZEvalDemo.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T12:00:10.085443Z",
-     "start_time": "2018-11-30T12:00:09.148452Z"
+     "end_time": "2018-12-03T08:29:38.430539Z",
+     "start_time": "2018-12-03T08:29:37.440624Z"
     }
    },
    "outputs": [],
@@ -26,8 +26,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T12:00:12.227771Z",
-     "start_time": "2018-11-30T12:00:12.223794Z"
+     "end_time": "2018-12-03T08:29:38.912699Z",
+     "start_time": "2018-12-03T08:29:38.908702Z"
     }
    },
    "outputs": [
@@ -51,8 +51,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T12:01:40.283352Z",
-     "start_time": "2018-11-30T12:00:13.060798Z"
+     "end_time": "2018-12-03T08:31:51.323995Z",
+     "start_time": "2018-12-03T08:29:58.623806Z"
     }
    },
    "outputs": [
@@ -61,20 +61,21 @@
      "output_type": "stream",
      "text": [
       "Loading json in memory ...\n",
-      "used time: 7.49704 s\n",
+      "used time: 7.10704 s\n",
       "Loading json in memory ...\n",
       "creating index...\n",
       "index created!\n",
-      "used time: 79.7175 s\n"
+      "used time: 105.586 s\n"
      ]
     }
    ],
    "source": [
     "# initialize COCO ground truth api\n",
     "root = 'E:\\Data\\coco'\n",
-    "dataType = 'annotations_trainval2014'\n",
+    "annType_ = 'annotations_trainval2014'\n",
     "annFile = 'annotations/instances_val2014.json'\n",
-    "cocoGt = COCOZ(root, dataType, annFile)"
+    "annZ = AnnZ(root, annType_)\n",
+    "cocoGt = COCOZ(annZ, annFile)"
    ]
   },
   {
@@ -82,8 +83,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T12:01:42.762698Z",
-     "start_time": "2018-11-30T12:01:42.712678Z"
+     "end_time": "2018-12-03T08:31:51.408033Z",
+     "start_time": "2018-12-03T08:31:51.339994Z"
     }
    },
    "outputs": [
@@ -92,7 +93,7 @@
      "output_type": "stream",
      "text": [
       "Loading and preparing results...\n",
-      "DONE (t=0.04s)\n",
+      "DONE (t=0.05s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -109,14 +110,14 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T12:01:44.676687Z",
-     "start_time": "2018-11-30T12:01:44.628709Z"
+     "end_time": "2018-12-03T08:31:55.287633Z",
+     "start_time": "2018-12-03T08:31:55.265630Z"
     }
    },
    "outputs": [],
    "source": [
-    "imgIds=sorted(cocoGt.getImgIds())\n",
-    "imgIds=imgIds[0:100]\n",
+    "imgIds = sorted(cocoGt.getImgIds())\n",
+    "imgIds = imgIds[0:100]\n",
     "imgId = imgIds[np.random.randint(100)]"
    ]
   },
@@ -125,9 +126,10 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-30T12:01:46.010348Z",
-     "start_time": "2018-11-30T12:01:45.324351Z"
-    }
+     "end_time": "2018-12-03T08:31:56.864434Z",
+     "start_time": "2018-12-03T08:31:56.083463Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -136,9 +138,9 @@
      "text": [
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=0.21s).\n",
+      "DONE (t=0.52s).\n",
       "Accumulating evaluation results...\n",
-      "DONE (t=0.43s).\n",
+      "DONE (t=0.23s).\n",
       " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.001\n",
       " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.003\n",
       " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
@@ -156,8 +158,8 @@
    ],
    "source": [
     "# running evaluation\n",
-    "cocoEval = COCOeval(cocoGt,cocoDt,annType)\n",
-    "cocoEval.params.imgIds  = imgIds\n",
+    "cocoEval = COCOeval(cocoGt, cocoDt, annType)\n",
+    "cocoEval.params.imgIds = imgIds\n",
     "cocoEval.evaluate()\n",
     "cocoEval.accumulate()\n",
     "cocoEval.summarize()"
