updating pycoco tools

--- a/PythonAPI/pycocoEvalDemo.ipynb
+++ b/PythonAPI/pycocoEvalDemo.ipynb
@@ -2,25 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
     "from pycocotools.coco import COCO\n",
     "from pycocotools.cocoeval import COCOeval\n",
-    "import numpy as np\n",
-    "import skimage.io as io\n",
-    "import pylab\n",
-    "pylab.rcParams['figure.figsize'] = (10.0, 8.0)"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -37,12 +32,12 @@
     "annType = ['segm','bbox','keypoints']\n",
     "annType = annType[1]      #specify type here\n",
     "prefix = 'person_keypoints' if annType=='keypoints' else 'instances'\n",
-    "print 'Running demo for *%s* results.'%(annType)"
+    "print('Running demo for *%s* results.'%(annType))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +47,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=8.01s)\n",
+      "Done (t=4.98s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -63,12 +58,12 @@
     "dataDir='../'\n",
     "dataType='val2014'\n",
     "annFile = '%s/annotations/%s_%s.json'%(dataDir,prefix,dataType)\n",
-    "cocoGt=COCO(annFile)"
+    "cocoGt = COCO(annFile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -77,8 +72,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading and preparing results...     \n",
-      "DONE (t=0.05s)\n",
+      "Loading and preparing results...\n",
+      "DONE (t=0.12s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -88,12 +83,12 @@
     "#initialize COCO detections api\n",
     "resFile='%s/results/%s_%s_fake%s100_results.json'\n",
     "resFile = resFile%(dataDir, prefix, dataType, annType)\n",
-    "cocoDt=cocoGt.loadRes(resFile)"
+    "cocoDt = cocoGt.loadRes(resFile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -115,22 +110,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running per image evaluation...      \n",
-      "DONE (t=0.46s).\n",
-      "Accumulating evaluation results...   \n",
-      "DONE (t=0.38s).\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.505\n",
-      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.697\n",
-      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.573\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.586\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.519\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.501\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.387\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.594\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.595\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.640\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.566\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.564\n"
+      "Running per image evaluation...\n",
+      "Evaluate annotation type *bbox*\n",
+      "DONE (t=0.18s).\n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=0.25s).\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.482\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.696\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.539\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.523\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.498\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.508\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.372\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.568\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.570\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.591\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.556\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.555\n"
      ]
     }
    ],
@@ -145,22 +141,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "73b4b63fab75275cc22557d8583617f6e244a28eab482e785f2d595a4709032f"
+  },
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
